Laboratorio 3 ya incluye las alertas

--- a/Semana03/PRJ_COMERCIAL/src/views/partials/navigation.hbs
+++ b/Semana03/PRJ_COMERCIAL/src/views/partials/navigation.hbs
@@ -40,8 +40,8 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Kardex</a></li>
-            <li><a class="dropdown-item" href="#">Producto</a></li>
-            <li><a class="dropdown-item" href="#">Categoría</a></li>
+            <li><a class="dropdown-item" href="/lista-productos">Producto</a></li>
+            <li><a class="dropdown-item" href="/lista-categorias">Categoría</a></li>
           </ul>
         </li>
       </ul>
