--- a/Semana03/PRJ_COMERCIAL/src/views/layouts/main.hbs
+++ b/Semana03/PRJ_COMERCIAL/src/views/layouts/main.hbs
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
   {{>navigation}}
 
   {{{body}}}
@@ -22,8 +23,42 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script>
+    function confirmDelete() {
+      Swal.fire({
+        title: '¿Estás seguro?',
+        text: "No podrás revertir esta acción.",
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Sí, eliminar'
+      }).then((result) => {
+        if (result.isConfirmed) {
 
+          document.querySelector('form').submit();
+        }
+      })
+    }
+    // Obtener el mensaje de la query string
+    const urlParams = new URLSearchParams(window.location.search);
+    const message = urlParams.get('message');
+
+    console.log('Message:', message); // Verifica si el mensaje se está capturando
+
+    // Mostrar la alerta si hay un mensaje
+    if (message) {
+        Swal.fire({
+            icon: 'success',
+            title: 'Éxito',
+            text: message,
+            timer: 3000, // Tiempo en milisegundos
+            showConfirmButton: false
+        });
+    }
+  </script>
+  
 </body>
+
 </html>
-
-
