Semana10 Laboratorio11, parte 2/4 finalizado

--- a/Semana11/Laboratorio01/src/app/app.component.html
+++ b/Semana11/Laboratorio01/src/app/app.component.html
@@ -1,1 +1,11 @@
-<h1>{{title}}</h1>
+<input [type]="tipo" name="txtnombre" [value]="valor"><br>
+<img [src]="img" [alt]="alttxt">
+<a [href]="enlace">YouTube</a>
+
+<p [className]="clase01">
+  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint dolore magni ipsa adipisci facilis id suscipit temporibus aliquam animi repellendus quis unde, excepturi commodi ex dolor sit ab beatae iure.
+</p>
+
+<p [className]="clase02">
+Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti iure voluptates deserunt at numquam enim. Fugit adipisci molestiae libero quis, minus voluptate eos, dolore blanditiis error eligendi fuga non minima odit. Enim nulla ipsam ut. Dicta voluptate, a error eligendi temporibus delectus. Ad fugit commodi vero minima error illum natus?
+</p>
