Semana10 Laboratorio 11, ejercicios propuestos finalizado 4/4

--- a/Semana11/Laboratorio01/src/app/app.component.html
+++ b/Semana11/Laboratorio01/src/app/app.component.html
@@ -1,1 +1,2 @@
-<button (click)="onClick()">Enviar</button>
+<input [(ngModel)]="nombre" placeholder="Ingresa tu nombre"/>
+<p>Hello, {{nombre}}!</p>
