--- a/Semana16/FrontendNunez/angular-app/src/app/components/home/home.component.html
+++ b/Semana16/FrontendNunez/angular-app/src/app/components/home/home.component.html
@@ -4,28 +4,35 @@
     <h2>Bienvenido al Home</h2>
     <button (click)="logout()">Cerrar sesión</button>
 
-        <nav>
-          <a routerLink="/login" routerLinkActive="active">Login</a>
-          <a routerLink="/registro" routerLinkActive="active">Registro</a>
-        </nav>
-        
-      
- 
+    <nav>
+        <a routerLink="/login" routerLinkActive="active">Login</a>
+        <a routerLink="/registro" routerLinkActive="active">Registro</a>
+    </nav>
+
+
+
     <table>
-      <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Correo</th>
-          <th>Cargo</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let empleado of empleados">
-          <td>{{ empleado.nombres }}</td>
-          <td>{{ empleado.correo }}</td>
-          <td>{{ empleado.cargo }}</td>
-        </tr>
-      </tbody>
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Apellidos</th>
+                <th>DNI</th>
+                <th>Teléfono</th>
+                <th>Correo</th>
+                <th>Sueldo</th>
+                <th>Cargo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let empleado of empleados">
+                <td>{{ empleado.nombres }}</td>
+                <td>{{ empleado.apellidos }}</td>
+                <td>{{ empleado.dni }}</td>
+                <td>{{ empleado.telefono }}</td>
+                <td>{{ empleado.correo }}</td>
+                <td>{{ empleado.sueldo }}</td>
+                <td>{{ empleado.cargo.nombre }}</td>
+            </tr>
+        </tbody>
     </table>
-  </div>
-  
+</div>
