--- a/Semana16/FrontendNunez/angular-app/src/app/components/registro/registro.component.html
+++ b/Semana16/FrontendNunez/angular-app/src/app/components/registro/registro.component.html
@@ -1,6 +1,11 @@
 <!-- src/app/register/register.component.html -->
 
 <div class="container">
+  <nav>
+    <a routerLink="/login" routerLinkActive="active">Login</a>
+    <a routerLink="/registro" routerLinkActive="active">Registro</a>
+</nav>
+
     <h2>Registro de Usuario</h2>
     <form (ngSubmit)="register()">
       <div>
